test/files/pos/t8411/Test_2.scala
object Test extends App {
  val pf = Macros.defaultZeroCase { case 1 => 2 }
  assert(pf(2) == 0)
}
