test/files/neg/macro-override-macro-overrides-abstract-method-b/Test_2.scala
object Test extends App {
  val designator: Foo = Macros
  designator.foo(42)
}